--- a/Dockerfile-slim
+++ b/Dockerfile-slim
@@ -1,23 +1,14 @@
-FROM ubuntu@sha256:80dd3c3b9c6cecb9f1667e9290b3bc61b78c2678c02cbdae5f0fea92cc6734ab
+FROM python:3.11-slim-buster@sha256:c46b0ae5728c2247b99903098ade3176a58e274d9c7d2efeaaab3e0621a53935
 
 ARG CHECKSUM=30d9424df1eddb73912b0e2ad5375fa2c876c8e30906bec91952dfb75dcf220b
 ARG STATIC_JINJA_PLUS_VERSION=0.1.1
-
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends python3 python3-pip python3-venv && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
 
 ADD --checksum=sha256:${CHECKSUM} \
     https://github.com/MrDave/StaticJinjaPlus/archive/refs/tags/${STATIC_JINJA_PLUS_VERSION}.tar.gz \
     /tmp/StaticJinjaPlus-${STATIC_JINJA_PLUS_VERSION}.tar.gz
 
 WORKDIR /StaticJinjaPlus
-
 RUN tar xzf /tmp/StaticJinjaPlus-${STATIC_JINJA_PLUS_VERSION}.tar.gz --strip-components=1 && rm /tmp/StaticJinjaPlus-${STATIC_JINJA_PLUS_VERSION}.tar.gz
-
-RUN python3 -m venv venv
-RUN . venv/bin/activate && pip install -r requirements.txt
 
 VOLUME ["/templates"]
 VOLUME ["/build"]
