--- a/Dockerfile-slim
+++ b/Dockerfile-slim
@@ -10,8 +10,10 @@ ADD --checksum=sha256:${CHECKSUM} \
 WORKDIR /StaticJinjaPlus
 RUN tar xzf /tmp/StaticJinjaPlus-${STATIC_JINJA_PLUS_VERSION}.tar.gz --strip-components=1 && rm /tmp/StaticJinjaPlus-${STATIC_JINJA_PLUS_VERSION}.tar.gz
 
+RUN pip install -r requirements.txt
+
 VOLUME ["/templates"]
 VOLUME ["/build"]
 
-ENTRYPOINT ["/StaticJinjaPlus/venv/bin/python3", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
 CMD ["--srcpath", "/templates", "--outpath", "/build"]
