--- a/Dockerfile-slim-develop
+++ b/Dockerfile-slim-develop
@@ -1,11 +1,13 @@
 FROM python:3.11-slim-buster@sha256:c46b0ae5728c2247b99903098ade3176a58e274d9c7d2efeaaab3e0621a53935
 
-ADD https://github.com/MrDave/StaticJinjaPlus.git /STATIC_JINJA_PLUS
+ADD https://github.com/MrDave/StaticJinjaPlus.git /StaticJinjaPlus
 
 WORKDIR /StaticJinjaPlus
+
+RUN pip install -r requirements.txt
 
 VOLUME ["/templates"]
 VOLUME ["/build"]
 
-ENTRYPOINT ["/StaticJinjaPlus/venv/bin/python3", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
 CMD ["--srcpath", "/templates", "--outpath", "/build"]
